# openenlarge

./: .gitignore  Cargo.toml  HANDOFF-color-cast.md  INVERSION-RESEARCH-HANDOFF.md  LICENSE  README.md  ROADMAP.md  i18n-strings.csv  package-lock.json
.claude/skills/cut-alpha/: SKILL.md
.claude/skills/cut-release/: SKILL.md
.github/workflows/: ci.yml  deploy-web.yml  pages.yml  release.yml
app/: README.md  openenlarge-bugfix-waves.md  openenlarge-color-roll-waves.md  package-lock.json  package.json
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: ai_enhance.rs  cache.rs  catalog.rs  color_match.rs  commands.rs  convert.rs  debug_log.rs  encode.rs  exif_write.rs  gpu_upload.rs  hdr.rs  lib.rs  metadata.rs  session.rs  telemetry.rs  tether.rs
app/src-tauri/src/autodust/: assets.rs  engine.rs  mod.rs
app/src-tauri/src/upscale/: assets.rs  engine.rs  mod.rs
app/src/lib/: api.test.ts  api.ts  catalog.test.ts  catalog.ts  debug.test.ts  debug.ts  perImage.test.ts  perImage.ts  selection.test.ts  selection.ts  store.ts  telemetry.ts  toast.ts  workflow.rollbase.test.ts  workflow.test.ts  workflow.ts
app/src/routes/: +page.svelte
app/src/styles/: theme.css
crates/film-bench/: Cargo.toml  README.md
crates/film-bench/benchdata/: c400.reference.json  c400.wedge.json  ektar.roi.json
crates/film-bench/src/: main.rs  manifest.rs  run.rs  tone_run.rs  wedge.rs
crates/film-cli/src/: main.rs
crates/film-core/examples/: detect_report.rs  expo_cct.rs  invert_d_png.rs  perf_probe.rs  raw_dump.rs  tune_cineon.rs
crates/film-core/src/: autocrop.rs  bench.rs  calibrate.rs  chart.rs  classify.rs  color.rs  colorchecker.rs  curve.rs  decode.rs  dust.rs  engine.rs  export.rs  finish.rs  image.rs  lib.rs  spectral.rs  tone.rs  wb.rs
docs/: RELEASING.md  feedback-tasks-2026-06.md  upscaler-assets.md
docs-src/: layout.html  nav.json  strings.json
docs-src/assets/: docs.css  docs.js
docs-src/content/: index.en.html  index.zh.html  reference__faq.en.html  reference__faq.zh.html  reference__glossary.en.html  reference__glossary.zh.html  reference__storage.en.html  reference__storage.zh.html  science__base-calibration.en.html  science__base-calibration.zh.html  science__color.en.html  science__color.zh.html  science__density.en.html  science__density.zh.html  science__inversion.en.html  science__inversion.zh.html  science__negatives.en.html  science__negatives.zh.html  science__tone-curve.en.html  science__tone-curve.zh.html  tools__ai.en.html  tools__ai.zh.html  tools__crop-dust.en.html  tools__crop-dust.zh.html  tools__develop-basic.en.html  tools__develop-basic.zh.html  tools__export.en.html  tools__export.zh.html  tools__library.en.html  tools__library.zh.html  tools__roll.en.html  tools__roll.zh.html  tools__tune.en.html  tools__tune.zh.html  workflow.en.html  workflow.zh.html
docs/screenshots/: README.md
docs/superpowers/: poc-findings.md
docs/superpowers/plans/: 2026-06-03-film-inversion-poc.md  2026-06-04-batch-export.md  2026-06-04-crop-plan-a.md  2026-06-04-eraser-dust-removal-manual-brush.md  2026-06-04-redroom-develop-workflow.md  2026-06-05-in-app-auto-update.md  2026-06-05-lazy-develop-quality-switch.md  2026-06-05-per-roll-base-calibration.md  2026-06-07-negadoctor-inversion.md  2026-06-15-film-base-detection-plan.md  2026-06-15-golden-path-plan1-one-engine.md  2026-06-15-golden-path-plan2-coherent-base-crop-aware.md  2026-06-16-ai-dust-hair-removal.md  2026-06-16-ai-dust-live-toggle.md  2026-06-16-ai-enhance.md  2026-06-16-color-match-reference.md  2026-06-16-hdr-export-plan.md  2026-06-16-hdr-preview-plan.md  2026-06-16-local-upscaler.md  2026-06-16-measured-white-point-dmax.md  2026-06-16-negative-positive-detection.md  2026-06-17-clipping-warning.md  2026-06-17-eraser-marquee-zoom.md  2026-06-17-proxy-resolution-redesign.md  2026-06-18-density-exposure-and-dmax-robustness.md  2026-06-18-develop-roll-contactsheet.md  2026-06-18-develop-roll-revision1.md  2026-06-20-alpha-release-channel.md  2026-06-20-color-head-wb-and-oklab-saturation.md  2026-06-20-eraser-spots.md  2026-06-20-inversion-benchmark-harness.md  2026-06-20-tone-calibration.md  2026-06-21-docs-site.md  2026-06-21-faithful-look-layer-sole-path.md  2026-06-21-faithful-tone-core.md  2026-06-21-roll-base-anchor.md  2026-06-22-ai-wb-rezero-perzone.md  2026-06-23-japanese-korean-localization.md  2026-06-24-auto-crop-lightbox.md  2026-06-24-deepzoom-windowed-render.md  (+5 more)
docs/superpowers/specs/: 2026-06-03-film-inversion-poc-design.md  2026-06-03-mpost-fitting-design.md  2026-06-04-basic-section-reset-design.md  2026-06-04-batch-export-design.md  2026-06-04-catalog-preview-cache-addendum.md  2026-06-04-develop-redesign-design.md  2026-06-04-eraser-dust-removal-ir-design.md  2026-06-04-folder-scoping-design.md  2026-06-04-gpu-develop-pipeline-design.md  2026-06-04-redroom-zoom-perf-design.md  2026-06-04-rotate-flip-straighten-design.md  2026-06-04-tone-curve-color-grading-design.md  2026-06-05-confirm-develop-stock-picker-design.md  2026-06-05-in-app-auto-update-design.md  2026-06-05-mainstream-film-profiles-design.md  2026-06-05-undo-redo-design.md  2026-06-07-gray-point-wb-picker-design.md  2026-06-07-negadoctor-inversion-design.md  2026-06-15-film-base-detection-design.md  2026-06-15-golden-path-inversion-spec.md  2026-06-15-multiselect-grid-filmstrip-design.md  2026-06-16-ai-dust-hair-removal-design.md  2026-06-16-ai-dust-live-toggle-design.md  2026-06-16-ai-enhance-design.md  (+40 more)
scripts/: gen-all.sh  gen-docs.py  gen-i18n.py  gen-web.py  optimize-web-html.py  optimize-web-html2.py  optimize-web-images.sh  test_gen_docs.py  test_gen_i18n.py  test_gen_web.py
web/: _headers  blog.html  i18n.js  index.html  landing-strings.json  releases-alpha.json  releases.js  releases.json  sitemap.xml
web/docs/: docs.css  index.html  robots.txt  sitemap.xml  workflow.html
web/img/: develop.avif  export.avif  library.avif  tune.avif
web/ja/: blog.html  index.html
web/ko/: blog.html  index.html
web/zh/: blog.html  index.html
(+202 files in other folders)
