[workspace]
resolver = "2"
members = ["crates/film-core", "crates/film-cli", "crates/film-bench"]
exclude = ["app/src-tauri"]

[workspace.dependencies]
nalgebra = "0.33"
tiff = "0.9"
rawler = "0.7"
image = "0.25"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
