[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
film-core = { path = "../../crates/film-core" }
image = "0.25"
base64 = "0.22"
rawler = "0.7"
little_exif = "0.6"
trash = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"
half = "2"


# Fast `tauri dev`: optimize dependencies (RAW decode, resize, inversion live in
# film-core/rawler/image) while keeping the app crate lightly optimized for quick
# rebuilds. Without this, debug builds run heavy image math 5-10x slower.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
