[package]
name = "app"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-aptabase = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
film-core = { path = "../../crates/film-core" }
image = "0.25"
base64 = "0.22"
rawler = "0.7"
little_exif = "0.6"
trash = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"
half = "2"
notify = "6"
ultrahdr = "0.1"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-24"] }
ndarray = "0.17"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
futures-util = "0.3"
# Owned multi-thread runtime entered for the whole app lifetime. The Aptabase
# plugin's flush loop uses raw `tokio::spawn` from Tauri's (non-async) setup, so a
# runtime context must be active or it panics with "no reactor running".
tokio = { version = "1", features = ["rt-multi-thread", "time", "net"] }


# Per-platform GPU execution providers for ort. Each MUST keep `api-24` (rc.12
# fails to compile without it). macOS = CoreML. Windows/Linux run on CPU: the
# hosted `onnxruntime.dll` is a DirectML build whose DirectML EP crashes the
# process on our models (native access violation, uncatchable) regardless of GPU,
# so we do NOT enable the `directml` feature. Do NOT enable multiple GPU EPs on
# one target.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-24", "coreml"] }

[dev-dependencies]
tempfile = "3"

# Fast `tauri dev`: optimize dependencies (RAW decode, resize, inversion live in
# film-core/rawler/image) while keeping the app crate lightly optimized for quick
# rebuilds. Without this, debug builds run heavy image math 5-10x slower.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
